--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def subset(input_list : list, start_index : int, end_index : int) -> list:\n",
+    "    sublist = []\n",
+    "    i = start_index - 1\n",
+    "\n",
+    "    while(i < end_index and i < len(input_list)):\n",
+    "        sublist.append(input_list[i])\n",
+    "        i = i + 1\n",
+    "\n",
+    "    return sublist"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,10 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def every_nth(input_list : list, step_size : int) -> list:\n",
+    "    nthlist = []\n",
+    "    i = step_size - 1\n",
+    "\n",
+    "    while(i < len(input_list)):\n",
+    "        nthlist.append(input_list[i])\n",
+    "        i = i + step_size\n",
+    "    \n",
+    "    return nthlist"
+   ]
   },
   {
    "cell_type": "code",
@@ -65,10 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def flatten(input_list : list) -> list:\n",
+    "    \n",
+    "    flatlist = [num for sublist in input_list for num in sublist]\n",
+    "    return flatlist"
+   ]
   },
   {
    "cell_type": "code",
@@ -84,10 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_lists(*args) -> list:\n",
+    "    mergedlist = []\n",
+    "\n",
+    "    for list in args:\n",
+    "        for element in list:\n",
+    "            if mergedlist.__contains__(element) == False: mergedlist.append(element)\n",
+    "\n",
+    "    return mergedlist"
+   ]
   },
   {
    "cell_type": "code",
@@ -104,10 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reverse_tuples(input_list : list) -> list:\n",
+    "\n",
+    "    return [tuple[::-1] for tuple in input_list]"
+   ]
   },
   {
    "cell_type": "code",
@@ -123,10 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_tuplicates(input_list : list) -> list:\n",
+    "    uniquelist = []\n",
+    "\n",
+    "    [uniquelist.append(x) for x in input_list if x not in uniquelist]\n",
+    "    return uniquelist"
+   ]
   },
   {
    "cell_type": "code",
@@ -145,7 +189,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def transpose(input_list : list) -> list:\n",
+    "    return [list(x) for x in zip(*input_list)]"
+   ]
   },
   {
    "cell_type": "code",
@@ -162,10 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def split_into_chunks(input_list : list, chunk_size : int) -> list:\n",
+    "    \n",
+    "    chunklist = [input_list[i:i + chunk_size] for i in range(0, len(input_list), chunk_size)]\n",
+    "    return chunklist"
+   ]
   },
   {
    "cell_type": "code",
@@ -181,10 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_dicts(*dict) -> dict:\n",
+    "    d = {}\n",
+    "\n",
+    "    for dictionary in dict:\n",
+    "        d = {**d, **dictionary}\n",
+    "\n",
+    "    return d"
+   ]
   },
   {
    "cell_type": "code",
@@ -201,10 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def by_parity(input_list : list) -> dict:\n",
+    "    evenlist = []\n",
+    "    oddlist = []\n",
+    "\n",
+    "    for num in input_list:\n",
+    "        if num & 1: oddlist.append(num)\n",
+    "        else: evenlist.append(num)\n",
+    "\n",
+    "    return {\"even\":evenlist,\"odd\":oddlist}"
+   ]
   },
   {
    "cell_type": "code",
@@ -222,10 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mean_key_value(input_dict : dict) -> dict:\n",
+    "    values = {}\n",
+    "\n",
+    "    for key, value in input_dict.items():\n",
+    "        mean = 0\n",
+    "\n",
+    "        for x in value:\n",
+    "            mean = mean + x\n",
+    "\n",
+    "        values[key] = mean / len(value)\n",
+    "\n",
+    "    return values"
+   ]
   },
   {
    "cell_type": "code",
@@ -244,8 +327,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
