--- a/GYAK/GYAK01/1_lesson_practice_empty.ipynb
+++ b/GYAK/GYAK01/1_lesson_practice_empty.ipynb
@@ -14,10 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def contains_odd(input_list : list) -> bool:\n",
+    "    i = 0\n",
+    "    \n",
+    "    while(i < len(input_list) and input_list[i] % 2 == 0):\n",
+    "        i = i + 1\n",
+    "\n",
+    "    if(i < len(input_list)): return True\n",
+    "    \n",
+    "    else: return False"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,10 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, False, False, True]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_odd(input_list : list[int]) -> list[bool]:\n",
+    "    masklist = []\n",
+    "\n",
+    "    for szam in input_list:\n",
+    "        if szam % 2 == 0: masklist.append(False)\n",
+    "        else: masklist.append(True)\n",
+    "\n",
+    "    return masklist"
+   ]
   },
   {
    "cell_type": "code",
@@ -56,10 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def element_wise_sum(input_list_1 : list[int], input_list_2 : list[int]) -> list[int]:\n",
+    "    sumlist = []\n",
+    "    i = 0\n",
+    "\n",
+    "    for szam in input_list_1:\n",
+    "        sumlist.append(szam + input_list_2[i])\n",
+    "        i = i + 1\n",
+    "    \n",
+    "    return sumlist"
+   ]
   },
   {
    "cell_type": "code",
@@ -76,10 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dict_to_list(input_dict : dict) -> list:\n",
+    "    tuplelist = []\n",
+    "\n",
+    "    for key, value in input_dict.items():\n",
+    "        tuplelist.append((key, value))\n",
+    "\n",
+    "    return tuplelist"
+   ]
   },
   {
    "cell_type": "code",
@@ -98,8 +146,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
