--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -44,19 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 7, 10]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def every_nth(input_list : list, step_size : int) -> list:\n",
-    "    nthlist = []\n",
-    "    i = step_size - 1\n",
-    "\n",
-    "    while(i < len(input_list)):\n",
-    "        nthlist.append(input_list[i])\n",
-    "        i = i + step_size\n",
-    "    \n",
-    "    return nthlist"
+    "    return input_list[::step_size]"
    ]
   },
   {
@@ -69,6 +73,31 @@
     "#return type: bool\n",
     "#function name must be: unique\n",
     "#input parameters: input_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def unique(input_list : list) -> bool:\n",
+    "    uniquelist = []\n",
+    "    for number in input_list:\n",
+    "        if uniquelist.__contains__(number): return False\n",
+    "        else: uniquelist.append(number)\n",
+    "    return True"
    ]
   },
   {
@@ -161,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_tuplicates(input_list : list) -> list:\n",
+    "def remove_duplicates(input_list : list) -> list:\n",
     "    uniquelist = []\n",
     "\n",
     "    [uniquelist.append(x) for x in input_list if x not in uniquelist]\n",
