Week 1 correction of correction

--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -15,15 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def subset(input_list : list, start_index : int, end_index : int) -> list:\n",
     "    sublist = []\n",
-    "    i = start_index - 1\n",
+    "    i = start_index\n",
     "\n",
-    "    while(i < end_index and i < len(input_list)):\n",
+    "    while(i <= end_index and i < len(input_list)):\n",
     "        sublist.append(input_list[i])\n",
     "        i = i + 1\n",
     "\n",
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +158,7 @@
     "\n",
     "    for list in args:\n",
     "        for element in list:\n",
-    "            if mergedlist.__contains__(element) == False: mergedlist.append(element)\n",
+    "            mergedlist.append(element)\n",
     "\n",
     "    return mergedlist"
    ]
