Week 2 GYAK correction

--- a/GYAK/GYAK02/GYAK02.ipynb
+++ b/GYAK/GYAK02/GYAK02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def set_one(inputarray : np.array) -> np.array:\n",
-    "    return np.fill_diagonal(inputarray, 1)"
+    "    np.fill_diagonal(inputarray, 1)\n",
+    "    return inputarray"
    ]
   },
   {
@@ -82,9 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 7]\n",
+      " [5 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "def do_transpose(inputarray : np.array) -> np.array:\n",
     "    return np.transpose(inputarray)"
@@ -126,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bool_array(inputarray: np.array) -> np.array:\n",
-    "    return np.array(inputarray, dtype=bool)"
+    "    return inputarray.astype(bool)"
    ]
   },
   {
@@ -148,13 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False  True]\n",
+      " [False False]]\n"
+     ]
+    }
+   ],
    "source": [
     "def invert_bool_array(inputarray: np.array) -> np.array:\n",
-    "    inputarray != 0\n",
-    "    return np.array(inputarray, dtype=bool)"
+    "    return ~inputarray.astype(bool)"
    ]
   },
   {
