--- a/HAZI/HAZI02/HAZI02.ipynb
+++ b/HAZI/HAZI02/HAZI02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def column_swap(inputarray : np.array) -> np.array:\n",
+    "    return np.fliplr(inputarray)"
+   ]
   },
   {
    "cell_type": "code",
@@ -57,10 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compare_two_array(inputarray1 : np.array, inputarray2 : np.array) -> np.array:\n",
+    "    return np.where(np.array(inputarray1) == np.array(inputarray2))[0].tolist()"
+   ]
   },
   {
    "cell_type": "code",
@@ -77,10 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_array_shape(inputarray : np.array) -> np.array:\n",
+    "    shape = np.array(inputarray).shape\n",
+    "    return f\"sor: {shape[0]}, oszlop:{shape[1]}, melyseg:{1 if len(shape) == 2 else shape[0]}\""
+   ]
   },
   {
    "cell_type": "code",
@@ -98,10 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def encode_Y(inputarray : np.array, numofclasses : int) -> np.array:\n",
+    "    pred = np.zeros((len(inputarray), numofclasses))\n",
+    "    pred[np.arange(len(inputarray)), inputarray] = 1\n",
+    "    return pred"
+   ]
   },
   {
    "cell_type": "code",
@@ -113,6 +128,24 @@
     "# Be:  [[0,1,0,0], [0, 0, 1, 0], [1, 0, 0, 0], [0, 0, 0, 1]]\n",
     "# Ki:  [1, 2, 0, 3]\n",
     "# decode_Y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 0 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decode_Y(inputarray : np.array) -> np.array:\n",
+    "    return np.array(np.argmax(inputarray, axis = 1))"
    ]
   },
   {
@@ -129,14 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt, ahol az 1D array-ben a páratlan számokat -1-re cseréli\n",
-    "# Be: [1,2,3,4,5,6]\n",
-    "# Ki: [-1,2,-1,4,-1,6]\n",
-    "# repalce_odd_numbers()"
+    "def eval_classification(inputlist : list, inputarray : np.array) -> np.array:\n",
+    "    idx = inputarray.index(max(inputarray))\n",
+    "    return inputlist[idx]"
    ]
   },
   {
@@ -144,7 +176,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Készíts egy olyan függvényt, ahol az 1D array-ben a páratlan számokat -1-re cseréli\n",
+    "# Be: [1,2,3,4,5,6]\n",
+    "# Ki: [-1,2,-1,4,-1,6]\n",
+    "# replace_odd_numbers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_odd_numbers(inputarray : np.array) -> np.array:\n",
+    "    inputarray[inputarray % 2 == 1] = -1\n",
+    "    return inputarray"
+   ]
   },
   {
    "cell_type": "code",
@@ -264,7 +312,7 @@
    "source": [
     "# Írj egy olyan függvényt ami visszadja, hogy mennyi másodperc telt el 1970 január 01. 00:02:00 óta. Int-el térjen vissza\n",
     "# Be: \n",
-    "# Ki: másodpercben az idó, int-é kasztolva\n",
+    "# Ki: másodpercben az idő, int-é kasztolva\n",
     "# sec_from_1970()"
    ]
   }
