Week2 HAZI correction

--- a/HAZI/HAZI02/HAZI02.ipynb
+++ b/HAZI/HAZI02/HAZI02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "def compare_two_array(inputarray1 : np.array, inputarray2 : np.array) -> np.array:\n",
-    "    return np.where(np.array(inputarray1) == np.array(inputarray2))[0].tolist()"
+    "    return np.where(inputarray1 == inputarray2)"
    ]
   },
   {
@@ -162,12 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def eval_classification(inputlist : list, inputarray : np.array) -> np.array:\n",
-    "    idx = inputarray.index(max(inputarray))\n",
+    "    idx = np.argmax(inputarray)\n",
     "    return inputlist[idx]"
    ]
   },
@@ -209,10 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def replace_by_value(inputarray : np.array, num : int) -> np.array:\n",
+    "    return np.where(inputarray < num, -1, 1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -229,14 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def array_multi(inputarray : np.array) -> int:\n",
+    "    return np.prod(inputarray)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,10 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def array_multi_2d(inputarray : np.array) -> np.array:\n",
+    "    return np.prod(inputarray, axis = 1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -267,10 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_border(inputarray : np.array) -> np.array:\n",
+    "    borderedarray = np.pad(inputarray, pad_width = 1, mode = 'constant', constant_values = 0)\n",
+    "    return borderedarray"
+   ]
   },
   {
    "cell_type": "code",
@@ -295,13 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Írj egy fügvényt ami vissza adja az aktuális dátumot az alábbi formában: YYYY-MM-DD. Térjen vissza egy 'numpy.datetime64' típussal.\n",
-    "# Be:\n",
-    "# Ki: 2017-03-24\n"
+    "def list_days(start_date: str, end_date: str)-> np.array:\n",
+    "    alldays = np.arange(start_date, end_date, dtype='datetime64[D]')\n",
+    "    return alldays"
    ]
   },
   {
@@ -310,10 +323,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Írj egy fügvényt ami vissza adja az aktuális dátumot az alábbi formában: YYYY-MM-DD. Térjen vissza egy 'numpy.datetime64' típussal.\n",
+    "# Be:\n",
+    "# Ki: 2017-03-24\n",
+    "# get_act_date()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_act_date() -> np.datetime64:\n",
+    "    return np.datetime64('today')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Írj egy olyan függvényt ami visszadja, hogy mennyi másodperc telt el 1970 január 01. 00:02:00 óta. Int-el térjen vissza\n",
     "# Be: \n",
     "# Ki: másodpercben az idő, int-é kasztolva\n",
     "# sec_from_1970()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sec_from_1970() -> int:\n",
+    "    ellapsedsecs = (np.datetime64('now') - np.datetime64('1970-01-01 00:02:00')).item().total_seconds()\n",
+    "    return int(ellapsedsecs)"
    ]
   }
  ],
@@ -333,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
