--- a/HAZI/HAZI02/HAZI02.ipynb
+++ b/HAZI/HAZI02/HAZI02.ipynb
@@ -83,13 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_array_shape(inputarray : np.array) -> np.array:\n",
-    "    shape = np.array(inputarray).shape\n",
-    "    return f\"sor: {shape[0]}, oszlop:{shape[1]}, melyseg:{1 if len(shape) == 2 else shape[0]}\""
+    "        shape = np.array(inputarray).shape\n",
+    "\n",
+    "        if np.any(inputarray) == True:\n",
+    "            return f\"sor: {shape[0]}, oszlop: {shape[1]}, melyseg: {1 if np.ndim(inputarray) <= 2 else shape[2]}\"\n",
+    "        \n",
+    "        else: \n",
+    "            return \"sor: 0, oszlop: 0, melyseg: 0\""
    ]
   },
   {
