Week2 HAZI more bugs exterminated

--- a/HAZI/HAZI02/HAZI02.ipynb
+++ b/HAZI/HAZI02/HAZI02.ipynb
@@ -83,12 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sor: 2, oszlop: 3, melyseg: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_array_shape(inputarray : np.array) -> np.array:\n",
-    "        shape = np.array(inputarray).shape\n",
+    "def get_array_shape(inputarray : np.array) -> str:\n",
+    "        shape = np.shape(inputarray)\n",
     "\n",
     "        if np.any(inputarray) == True:\n",
     "            return f\"sor: {shape[0]}, oszlop: {shape[1]}, melyseg: {1 if np.ndim(inputarray) <= 2 else shape[2]}\"\n",
