--- a/GYAK/GYAK06/main.ipynb
+++ b/GYAK/GYAK06/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "5           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,27 +121,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = data.iloc[:, :-1].values\n",
-    "y = data.iloc[:, -1].values.reshape(-1, 1)\n",
+    "X = data.iloc[:, :-1].values\n",
+    "Y = data.iloc[:, -1].values.reshape(-1,1)\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 41)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=.2, random_state=41)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DecisionTreeClassifier.__init__() got an unexpected keyword argument 'min_samples_split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m classifier \u001b[39m=\u001b[39m DecisionTreeClassifier(min_samples_split\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m, max_depth\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\n\u001b[0;32m      2\u001b[0m classifier\u001b[39m.\u001b[39mfit(X_train, Y_train)\n\u001b[0;32m      4\u001b[0m Y_pred \u001b[39m=\u001b[39m classifier\u001b[39m.\u001b[39mpredict(X_test)\n",
+      "\u001b[1;31mTypeError\u001b[0m: DecisionTreeClassifier.__init__() got an unexpected keyword argument 'min_samples_split'"
+     ]
+    }
+   ],
    "source": [
     "classifier = DecisionTreeClassifier(3, 3)\n",
-    "classifier.fit(x_train, y_train)\n",
+    "classifier.fit(X_train, Y_train)\n",
     "\n",
-    "y_pred = classifier.predict(y_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "Y_pred = classifier.predict(X_test)\n",
+    "print(accuracy_score(Y_test, Y_pred))"
    ]
   }
  ],
@@ -161,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
