--- a/GYAK/GYAK08/LinearRegression.ipynb
+++ b/GYAK/GYAK08/LinearRegression.ipynb
@@ -2,20 +2,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 2,
       "metadata": {
         "id": "WirC4JJduu5J"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -31,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 3,
       "metadata": {
         "id": "7o4DG1f9uu5J",
         "outputId": "0b735ec4-7737-4cc0-ab91-f2b675690421"
@@ -164,7 +155,7 @@
               "[150 rows x 4 columns]"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -178,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 4,
       "metadata": {
         "id": "laJvHBxquu5K",
         "outputId": "bc65e784-37d1-477a-f16d-57f799c743a3"
@@ -216,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 5,
       "metadata": {
         "id": "deLFtIljuu5K",
         "outputId": "8e0de515-aae7-4c75-c978-69c6d79319d5"
@@ -228,7 +219,7 @@
               "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -239,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 6,
       "metadata": {
         "id": "1v07Homluu5L",
         "outputId": "b9536f81-e502-420d-ebd6-13ada7791e1f"
@@ -264,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 7,
       "metadata": {
         "id": "NOMXOZ3Iuu5L",
         "outputId": "c90cc98f-285c-4dff-837a-816179fb5c92"
@@ -315,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 8,
       "metadata": {
         "id": "wjL4tGDiuu5N"
       },
@@ -327,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 9,
       "metadata": {
         "id": "OFNXi-96uu5N"
       },
@@ -339,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 10,
       "metadata": {
         "id": "3hQuJbnEuu5N",
         "outputId": "c68417c3-225b-4c63-c6ff-f471ae8cc07f"
@@ -363,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 11,
       "metadata": {
         "id": "o_WGL2lVuu5O",
         "outputId": "b91af298-4450-44bd-fddd-576deae2c651"
@@ -415,16 +406,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x12b18c400>]"
+              "[<matplotlib.lines.Line2D at 0x133037520>]"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -446,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -478,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -500,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 15,
       "metadata": {
         "id": "b0zl92Chuu5O",
         "outputId": "1017f60c-fe88-4921-c04b-08e9410d509d"
@@ -535,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -575,12 +566,12 @@
         "\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
-        "a = Lr.fit(X_train, Y_train)\n",
-        "b = Lr.predict(X_test)\n",
+        "fitted = Lr.fit(X_train, Y_train)\n",
+        "predicted = Lr.predict(X_test)\n",
         "\n",
-        "print(\"Mean Absolute Error:\", np.mean(np.abs(b - Y_test)))\n",
+        "print(\"Mean Absolute Error:\", np.mean(np.abs(predicted - Y_test)))\n",
         "plt.scatter(X_test, Y_test)\n",
-        "plt.plot([min(X_test), max(X_test)], [min(b), max(b)], color='red') # predicted\n",
+        "plt.plot([min(X_test), max(X_test)], [min(predicted), max(predicted)], color='red') # predicted\n",
         "plt.show()"
       ]
     }
